# CRIMESCOPE

./: .env.example  .gitignore  CrimeFish_PRD_v1_2.docx  README.md  docker-compose.yml  package-lock.json  pr_payload_revised.json  test_graph.py  test_upload.py
backend/: Dockerfile  __init__.py  celery_config.py  config.py  main.py  pyproject.toml  requirements-v2.txt  requirements.txt  run_v2.py
backend/agents/: __init__.py  agent.py  base_agent.py  models.py  supervisor.py  swarm_manager.py
backend/agents/archetypes/: __init__.py
backend/agents/functional/: __init__.py  base.py  contradiction_agent.py  entity_extraction_agent.py  evidence_correlation_agent.py  ingestion_agent.py  legal_reasoning_agent.py  synthesis_agent.py  timeline_agent.py
backend/api/: chat.py  events.py  health.py  simulation.py
backend/app/: config.py  main.py
backend/app/api/: __init__.py  crimescope.py  dependencies.py  router.py  websocket.py
backend/app/core/: config.py  logger.py  redis_client.py  security.py
backend/app/engine/: supervisor.py  tasks.py
backend/app/engine/agents/: base.py  document.py  entity.py  graph.py  video.py
backend/app/graph/: __init__.py  buffer.py  driver.py  schema.cypher
backend/app/schemas/: events.py
backend/app/services/: __init__.py  crimescope_swarm_service.py  ontology_generator.py
backend/app/storage/: minio_client.py
backend/app/utils/: llm_client.py
backend/chat/: __init__.py  handler.py
backend/core/: __init__.py  config.py  events.py  exceptions.py  llm.py  logger.py  state.py
backend/db/: __init__.py  memory_store.py  models.py  supabase_client.py
backend/demo/: __init__.py  harlow_case.py
backend/engine/: probable_cause.py
backend/graph/: __init__.py  builder.py  extractor.py  neo4j_client.py  schema.py  traversal.py
backend/infrastructure/: __init__.py  redis_client.py
backend/llm/: __init__.py
backend/memory/: __init__.py  chroma_client.py  mem0_client.py  zep_manager.py
backend/models/: schemas.py
backend/pipeline/: audio.py  chunking.py  documents.py  keyframes.py  schemas.py  vision.py
backend/routers/: __init__.py  api_models.py  cases.py  chat.py  demo.py  graph.py  health.py  pipeline_stream.py  report.py  simulation.py  upload.py
backend/simulation/: __init__.py  engine.py  events.py  runner.py  voting.py
backend/tests/: test_hardening.py  test_integration_stress.py  test_qa_audit.py  test_schemas.py  test_security.py
backend/utils/: __init__.py  logger.py  openrouter.py  rate_limiter.py
crimescope/: index.html
crimescope/assets/css/: animations.css  base.css  graph.css  layout.css  legend.css  panel.css  shader-sections.css  topbar.css
crimescope/assets/js/: app.js  config.js  interactions.js  panel.js  renderer.js  simulation.js  state.js
crimescope/assets/js/data/: edges.js  nodes.js
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
frontend/src/: App.vue
frontend/src/api/: client.js
frontend/src/assets/: style.css
frontend/src/components/: AgentSwarm.vue  ErrorBoundary.vue  KnowledgeGraph.vue  SecureUpload.vue
frontend/src/components/agents/: AgentCard.vue  AgentGraph.vue  AgentProfile.vue
frontend/src/components/chat/: ChatBubble.vue  ChatPanel.vue
frontend/src/components/graph/: DetailPanel.vue  GraphCanvas.vue  Legend.vue
frontend/src/components/landing/: HowItWorks.vue  (+4 more)
frontend/src/composables/: useForceGraph.js  useMagnetic.js  useSSE.js  useWebSocket.ts
frontend/src/data/: harlow.js
frontend/src/router/: index.js
frontend/src/stores/: agents.js  analysisStore.ts  caseStore.js  chat.js  graphStore.js  simulation.js  simulationStore.js  themeStore.js
frontend/src/types/: index.ts
frontend/src/views/: AppView.vue  Home.vue  HomeView.vue  LandingView.vue  NewSimulationView.vue  NotFoundView.vue  ReportView.vue  SimulateView.vue
locales/: en.json  languages.json  translation_summary.json  zh.json
tests/: conftest.py
tests/unit/: test_chunking.py  test_contradiction_agent.py  test_exceptions.py  test_graph_schema.py  test_graph_traversal.py  test_keyframes.py  test_redis_client.py  test_synthesis_agent.py  test_timeline_agent.py  test_voting.py
website/: index.html  main.js  style.css
website/src/: main.js  style.css
website/src/sections/: 01-hero.js  02-problem.js  05-swarm-viz.js
(+14 files in other folders)
