[project]
name = "crimescope-backend"
version = "2.0.0"
description = "CrimeScope Swarm Intelligence Engine — GraphRAG + Parallel Multi-Agent"
requires-python = ">=3.11"
dependencies = [
    # ── Core Web Framework ───────────────────────────────────────────
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",

    # ── Data Stores ──────────────────────────────────────────────────
    "supabase>=2.0.0",
    "chromadb>=0.4.18",
    "redis[hiredis]>=5.0.0",

    # ── AI / LLM ─────────────────────────────────────────────────────
    "openai>=1.0.0",
    "mem0ai>=0.1.0",

    # ── Document Processing ──────────────────────────────────────────
    "Pillow>=10.0.0",
    "python-docx>=1.0.0",
    "PyMuPDF>=1.23.0",
    "moviepy>=1.0.3",

    # ── Audio / Video Processing ─────────────────────────────────────
    "openai-whisper>=20231117",
    "opencv-python-headless>=4.8.0",

    # ── OCR ───────────────────────────────────────────────────────────
    "pytesseract>=0.3.10",

    # ── Resilience ───────────────────────────────────────────────────
    "tenacity>=8.2.0",

    # ── Logging ──────────────────────────────────────────────────────
    "structlog>=23.2.0",
]

[project.optional-dependencies]
neo4j = ["neo4j>=5.14.0"]
full = [
    "neo4j>=5.14.0",
    "openai-whisper>=20231117",
    "opencv-python-headless>=4.8.0",
    "pytesseract>=0.3.10",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
