[project]
name = "crimescope"
version = "4.1.0"
description = "Production-grade criminal reconstruction engine with parallel AI agents, GraphRAG, and real-time streaming."
requires-python = ">=3.11"
dependencies = [
    # ── Web Framework ────────────────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.18",
    # ── Authentication & Security ────────────────────────────────────
    "python-jose[cryptography]>=3.4.0",
    # ── Task Queue ────────────────────────────────────────────────────
    "celery[redis]>=5.4.0",
    # ── AI / LLM ──────────────────────────────────────────────────────
    "langgraph>=0.4.0",
    "langchain-core>=0.3.0",
    "httpx>=0.28.0",
    "openai>=1.60.0",
    # ── Databases ─────────────────────────────────────────────────────
    "neo4j>=5.28.0",
    "qdrant-client>=1.13.0",
    "redis[hiredis]>=5.2.0",
    # ── Object Storage ────────────────────────────────────────────────
    "minio>=7.2.0",
    # ── Document Processing ───────────────────────────────────────────
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "ffmpeg-python>=0.2.0",
    # ── Embeddings ────────────────────────────────────────────────────
    "sentence-transformers>=3.4.0",
    # ── Utilities ─────────────────────────────────────────────────────
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "ruff>=0.9.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
